@@ -1,5 +1,8 @@
 2009-06-04  Thomas M Hinkle  <tom@minime>
 
+	* src/lib/convert.py (NUM_AND_FRACTION_REGEXP): Fix typo for
+	langauges without fraction support (ubuntu bug #352678)
+
 	* test_deb.sh: Wipe out packages installed by python2.6 as well.
 
 	* src/lib/reccard.py (RecCard.__init__): ++ get app if not handed
